<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ConActivity">

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shockBar"
        android:max="200"
        android:indeterminate="false"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setbutton"
        android:id="@+id/setBtn"
        android:onClick="setBtnClick"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/ychkBox"
        android:layout_centerHorizontal="true"
        android:isScrollContainer="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/shockthreshold"
        android:id="@+id/textView"
        android:layout_marginTop="114dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/threshText"
        android:textAlignment="center"
        android:layout_alignTop="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xplane"
        android:id="@+id/xchkBox"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yplane"
        android:id="@+id/ychkBox"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zplane"
        android:id="@+id/zchkBox"
        android:layout_below="@+id/textView1"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/planesel"
        android:id="@+id/textView1"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/shockBar"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
