<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="fill_parent"
android:layout_height="fill_parent"
    android:background="#10f80c"
    android:gravity="center"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/splashtext"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/splashby"
        android:id="@+id/textView3"
        android:layout_gravity="right"
        android:textColor="#040404" />

    <ImageView android:id="@+id/splash" android:layout_width="match_parent"
    android:layout_height="210dp"
    android:src="@drawable/beegees"
        android:contentDescription="@string/splashimage"
        android:layout_gravity="center_horizontal|left" />

</LinearLayout>
