<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="team7.blueshock.scanActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/scanBtn"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="cancelBtnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:id="@+id/selBtn"
        android:clickable="false"
        android:onClick="selBtnClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scanView"
        android:layout_below="@+id/scanBtn"
        android:layout_alignParentStart="true"
        android:choiceMode="singleChoice"
        android:layout_above="@+id/selBtn"
        android:listSelector="@android:color/holo_orange_dark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rescan"
        android:id="@+id/rescanBtn"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="rescanBtnClick" />

</RelativeLayout>
